Fixed paddings/margins in modules in sidebar bottom and right (hopefully not messing other things up). Made truncated links not overflow on hover. Fix for colored index and info modules to show correctly with box

--- a/assets/source/sass/component/box/_box.scss
+++ b/assets/source/sass/component/box/_box.scss
@@ -62,6 +62,10 @@
 	font-size: 15px;
 	font-weight: 600;
     }
+
+    > h5 {
+        padding-bottom: 10px;
+    }
 }
 
 /* === Action Cards === */
@@ -141,14 +145,6 @@
     border: none;
 }
 
-.sidebar-content-area {
-    //padding-bottom: 30px;
-}
-
-.sidebar-content-area-bottom .box {
-    margin-bottom: 0px;
-}
-
 .sidebar-bottom-fullwidth .box {
     margin-bottom: 0px;
 }
@@ -164,6 +160,17 @@
         .modularity-mod-fileslist {
             .box-title {
                 color: $base-font-color;
+            }
+        }
+    }
+    
+    .modularity-mod-colored-index {
+        .grid > [class*="grid-"] {
+            &:not(:first-child) {
+                padding-left: 15px;
+            }
+            &:not(:last-child) {
+                padding-right: 15px;
             }
         }
     }
