--- a/assets/source/sass/layout/_modules.scss
+++ b/assets/source/sass/layout/_modules.scss
@@ -25,10 +25,6 @@
     }
 }
 
-.grid-md-12 {
-    margin-bottom: 15px;
-}
-
 .block-title {
     text-align: center;
     h1 {
